# ChangeLog for net-libs/librsync
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/librsync/ChangeLog,v 1.28 2009/09/23 18:50:06 patrick Exp $

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> librsync-0.9.6.ebuild,
  librsync-0.9.7.ebuild:
  Remove virtual/libc

  16 Jan 2008; Fabian Groffen <grobian@gentoo.org> librsync-0.9.7.ebuild,
  librsync-0.9.7-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*librsync-0.9.7-r1 (06 Oct 2007)

  06 Oct 2007; Ryan Hill <dirtyepic@gentoo.org>
  +files/librsync-0.9.7-huge-files.patch, +librsync-0.9.7-r1.ebuild:
  Add upstream patch to support +4GiB file sizes. Bug #142945 by Vadim. Add
  epunt_cxx for bug #185600 by Laurence Withers. Maintainer-needed commit.

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove ka0ttic from metadata.xml due to retirement.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  14 Sep 2006; Danny van Dyk <kugelfang@gentoo.org> librsync-0.9.7.ebuild:
  Marked stable on amd64.

  17 Aug 2006; Markus Rothe <corsair@gentoo.org> librsync-0.9.7.ebuild:
  Stable on ppc64

  06 Jul 2006; Brent Baude <ranger@gentoo.org> librsync-0.9.7.ebuild:
  Marking librsync-0.9.7 ~ppc64 to satisfy an rdiff-backup broken dep per Mr.
  Bones

  15 Sep 2005; Aron Griffis <agriffis@gentoo.org> librsync-0.9.7.ebuild:
  Mark 0.9.7 stable on alpha

  27 May 2005; Lars Weiler <pylon@gentoo.org> librsync-0.9.7.ebuild:
  Stable on ppc.

  01 Apr 2005; Aron Griffis <agriffis@gentoo.org> librsync-0.9.7.ebuild:
  stable on ia64

  24 Feb 2005; Lina Pezzella <j4rg0n@gentoo.org> librsync-0.9.7.ebuild:
  Stable ppc-macos

  22 Jan 2005; Lina Pezzella <j4rg0n@gentoo.org> librsync-0.9.7.ebuild:
  Unstable ppc-macos.

  07 Dec 2004; Gustavo Zacarias <gustavoz@gentoo.org> librsync-0.9.7.ebuild:
  Stable on sparc

  24 Nov 2004; Aaron Walker <ka0ttic@gentoo.org> librsync-0.9.7.ebuild: